<resources>
    <string name="app_name">Euforia Gym App</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="btnLogin">Login</string>
    <string name="password">Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Equipos</string>
    <string name="title_notifications">Configuracion</string>
    <string name="title_sede">Sede</string>
    <string name="title_maps">Maps</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="volver">Volver</string>
    <string name="registrar">Registrar</string>
    <string name="email">Email</string>
    <string name="fred_bauer">Fred Bauer</string>
    <string name="schedule_test">4:00 PM - 8:00 PM</string>
    <string name="horario_de_atencion">Horario de Atencion</string>
    <string name="star_schedule">9:00 AM</string>
    <string name="end_schedule">9:00 PM</string>
    <string name="actualmente">Actualmente</string>
    <string name="time_schedule">Abierto</string>
    <string name="tiempo_restante_de_la_membresia">Tiempo Restante de la Membresia</string>
    <string name="_25">25</string>
    <string name="dias">dias</string>
    <string name="entrenadores_de_turno">Entrenadores de turno</string>
    <string name="ver_mas">Ver mas</string>
    <string name="actividades_de_hoy">Actividades</string>
    <string name="clases_de_baile">Clases de Baile</string>
    <string name="instructor">Instructor:</string>
    <string name="name_instructor">Arturo Cossio</string>
    <string name="dia_y_hora">Dia y Hora:</string>
    <string name="horario">Sabado 8:00 AM - 10:00 AM</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="gestionar_perfil">Gestionar Perfil</string>
    <string name="gestionar">Gestionar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="trainers">Trainers</string>
    <string name="equipo">Equipo</string>
    <string name="add">add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="descripcion">Descripcion</string>
    <string name="nombre">"Nombre: "</string>
    <string name="horario_">"Horario: "</string>
    <string name="tel_fono">"Teléfono: "</string>
</resources>