<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fitworkgym.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.fitworkgym.ui.fragments.equipo.EquipoFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_equipo" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.fitworkgym.ui.fragments.configuracion.ConfiguracionFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_configuracion" />
    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.fitworkgym.ui.fragments.sede.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />
</navigation>