<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_add_trainer"
    tools:context=".ui.fragments.login.AddTrainerFragment"
    android:padding="24dp">


    <ImageView
        android:id="@+id/imgTrainer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btoUpload"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#040404"
        android:lineSpacingExtra="14sp"
        android:text="@string/upload"
        android:textColor="@android:color/holo_orange_light"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTrainer"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/nameRegister"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:ems="20"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btoUpload"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/trainerRegister"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:ems="20"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameRegister"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/phoneTrainer"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:ems="20"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainerRegister"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/scheduleTrainer"
        android:layout_width="265dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="text"
        android:ems="10"
        android:hint="@string/schedule_test"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTrainer"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btoRegister"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#040404"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="14sp"
        android:text="@string/registrar"
        android:textColor="@android:color/holo_orange_light"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btoVolverTrainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleTrainer"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/btoVolverTrainer"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#040404"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="14sp"
        android:text="@string/volver"
        android:textColor="@android:color/holo_orange_light"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btoRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.16"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>