<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_trainer_admin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp"
    android:backgroundTint="#FFF45C"
    app:cardCornerRadius="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/profile_trainer_admin"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/title_maps"
            android:src="@drawable/logo"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/trainer_admin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nombre"
                    android:textColor="#1D1B20"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <TextView
                    android:id="@+id/trainer_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/fred_bauer"
                    android:textColor="#1D1B20"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/schedule_admin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="#1D1B20"
                    android:text="@string/horario_"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                <TextView
                    android:id="@+id/schedule_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="#1D1B20"
                    android:text="@string/schedule_test"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/phone_admin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="#1D1B20"
                    android:text="@string/tel_fono"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                <TextView
                    android:id="@+id/phone_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="#1D1B20"
                    android:text="@string/schedule_test"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>