<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_trainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="24dp"
    tools:context=".ui.fragments.login.AddTrainerFragment">


    <ImageView
        android:id="@+id/imgTrainer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btoImgEquipo"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btoImgEquipo"
        android:layout_width="265dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#040404"
        android:lineSpacingExtra="14sp"
        android:text="@string/upload"
        android:textColor="@android:color/holo_orange_light"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/nameEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTrainer"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/nameEquipo"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:ems="20"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btoImgEquipo"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/descriptionEquipo"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:ems="20"
        android:hint="@string/descripcion"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEquipo"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/btoEquipo"
        android:layout_width="265dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#040404"
        android:lineSpacingExtra="14sp"
        android:text="@string/registrar"
        android:textColor="@android:color/holo_orange_light"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btoVolverEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEquipo"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/btoVolverEquipo"
        android:layout_width="265dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#040404"
        android:lineSpacingExtra="14sp"
        android:text="@string/volver"
        android:textColor="@android:color/holo_orange_light"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btoEquipo"
        app:layout_constraintVertical_bias="0.16"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>