<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_equipo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp"
    android:backgroundTint="#E5E5E5"
    app:cardCornerRadius="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgEquipo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/title_maps"
            android:src="@drawable/logo"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/nameEquipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fred_bauer"
                android:textColor="#1D1B20"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionEquipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#1D1B20"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/schedule_test"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>